@@ -2,6 +2,13 @@
 <!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>Local File</key>
+	<dict>
+		<key>LinkName</key>
+		<string>Enter the path under your home folder</string>
+		<key>LinkTemplate</key>
+		<string>file:///~/%@</string>
+	</dict>
 	<key>LiveJournal</key>
 	<dict>
 		<key>SiteHomePage</key>
