@@ -343,43 +343,105 @@ static NSMutableDictionary * entityMap = nil;
 			@"'",	@"lsquo",
 			@"'",	@"apos",
 			@"...", @"hellip",
-			@" ",   @"nbsp",
+			@" ",	@"nbsp",
 			nil,	nil] retain];
-
+		
 		// Add entities that map to non-ASCII characters
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xF6] forKey:@"ouml"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xD6] forKey:@"Ouml"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xF4] forKey:@"ocirc"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xD4] forKey:@"Ocirc"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xFC] forKey:@"uuml"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xDC] forKey:@"Uuml"];
-        [entityMap setValue:[NSString stringWithFormat:@"%C", 0xF9] forKey:@"ugrave"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xFB] forKey:@"ucirc"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xD9] forKey:@"Ugrave"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xDB] forKey:@"Ucirc"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xEF] forKey:@"iuml"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xCF] forKey:@"Iuml"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xEB] forKey:@"euml"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xCB] forKey:@"Euml"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE9] forKey:@"eacute"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC9] forKey:@"Eacute"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE8] forKey:@"egrave"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC8] forKey:@"Egrave"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xEA] forKey:@"ecirc"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xCA] forKey:@"Ecirc"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE4] forKey:@"auml"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC4] forKey:@"Auml"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE0] forKey:@"agrave"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC2] forKey:@"Agrave"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE7] forKey:@"ccedil"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC7] forKey:@"Ccedil"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xCE] forKey:@"Icirc"];
-		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xEE] forKey:@"icirc"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xA1] forKey:@"iexcl"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xA2] forKey:@"cent"];
 		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xA3] forKey:@"pound"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xA4] forKey:@"curren"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xA5] forKey:@"yen"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xA6] forKey:@"brvbar"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xA7] forKey:@"sect"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xA8] forKey:@"uml"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xA9] forKey:@"copy"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xAA] forKey:@"ordf"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xAC] forKey:@"not"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xAE] forKey:@"reg"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xAF] forKey:@"macr"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xB0] forKey:@"deg"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xB1] forKey:@"plusmn"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xB2] forKey:@"sup2"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xB3] forKey:@"sup3"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xB4] forKey:@"acute"];
 		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xB5] forKey:@"micro"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xB6] forKey:@"para"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xB7] forKey:@"middot"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xB8] forKey:@"cedil"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xB9] forKey:@"sup1"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xBA] forKey:@"ordm"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xBB] forKey:@"raquo"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xBC] forKey:@"frac14"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xBD] forKey:@"frac12"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xBE] forKey:@"frac34"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xBF] forKey:@"iquest"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC0] forKey:@"Agrave"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC1] forKey:@"Aacute"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC3] forKey:@"Atilde"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC4] forKey:@"Auml"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC5] forKey:@"Aring"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC6] forKey:@"AElig"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC7] forKey:@"Ccedil"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC8] forKey:@"Egrave"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC9] forKey:@"Eacute"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xCA] forKey:@"Ecirc"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xCB] forKey:@"Euml"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xCC] forKey:@"Igrave"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xCD] forKey:@"Iacute"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xCE] forKey:@"Icirc"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xCF] forKey:@"Iuml"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xD0] forKey:@"ETH"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xD1] forKey:@"Ntilde"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xD2] forKey:@"Ograve"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xD3] forKey:@"Oacute"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xD4] forKey:@"Ocirc"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xD5] forKey:@"Otilde"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xD6] forKey:@"Ouml"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xD7] forKey:@"times"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xD8] forKey:@"Oslash"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xD9] forKey:@"Ugrave"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xDA] forKey:@"Uacute"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xDB] forKey:@"Ucirc"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xDC] forKey:@"Uuml"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xDD] forKey:@"Yacute"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xDE] forKey:@"THORN"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xDF] forKey:@"szlig"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE0] forKey:@"agrave"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE1] forKey:@"aacute"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE2] forKey:@"acirc"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE3] forKey:@"atilde"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE4] forKey:@"auml"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE5] forKey:@"aring"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE6] forKey:@"aelig"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE7] forKey:@"ccedil"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE8] forKey:@"egrave"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xE9] forKey:@"eacute"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xEA] forKey:@"ecirc"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xEB] forKey:@"euml"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xEC] forKey:@"igrave"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xED] forKey:@"iacute"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xEE] forKey:@"icirc"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xEF] forKey:@"iuml"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xF0] forKey:@"eth"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xF1] forKey:@"ntilde"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xF2] forKey:@"ograve"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xF3] forKey:@"oacute"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xF4] forKey:@"ocirc"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xF5] forKey:@"otilde"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xF6] forKey:@"ouml"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xF7] forKey:@"divide"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xF8] forKey:@"oslash"];
+        [entityMap setValue:[NSString stringWithFormat:@"%C", 0xF9] forKey:@"ugrave"];
+        [entityMap setValue:[NSString stringWithFormat:@"%C", 0xFA] forKey:@"uacute"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xFB] forKey:@"ucirc"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xFC] forKey:@"uuml"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xFD] forKey:@"yacute"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xFE] forKey:@"thorn"];
 		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xC3C] forKey:@"sigma"];
 		[entityMap setValue:[NSString stringWithFormat:@"%C", 0xCA3] forKey:@"Sigma"];
 		[entityMap setValue:[NSString stringWithFormat:@"%C", 0x2022] forKey:@"bull"];
+		[entityMap setValue:[NSString stringWithFormat:@"%C", 0x20AC] forKey:@"euro"];
 	}
 	
 	// Parse off numeric codes of the format #xxx
